--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 
@@ -51,6 +52,48 @@
       </div>
     </div>
   </section>
+
+  <section id="interests" class="section reveal">
+    <div class="container">
+      <h2>Interests & Influences</h2>
+      <p class="section-intro">
+        Personal interests that shape how I think, observe, and create.
+      </p>
+
+      <div class="interest-grid">
+        <div class="interest-item primary">
+          <h4>Cinematography</h4>
+          <p>Understanding framing, lighting, and pacing to design better visual flow.</p>
+        </div>
+
+        <div class="interest-item primary">
+          <h4>Design</h4>
+          <p>Practicing clarity and balance to communicate ideas effectively.</p>
+        </div>
+
+        <div class="interest-item primary">
+          <h4>Coding</h4>
+          <p>Breaking complex problems into clean and logical solutions.</p>
+        </div>
+
+        <div class="interest-item secondary">
+          <h4>Games</h4>
+          <p>Learning interaction, feedback, and user engagement through play.</p>
+        </div>
+
+        <div class="interest-item secondary">
+          <h4>Manga & Anime</h4>
+          <p>Appreciating storytelling, pacing, and atmosphere through visual narratives.</p>
+        </div>
+
+        <div class="interest-item secondary">
+          <h4>Basketball</h4>
+          <p>Building discipline, teamwork, and consistency in collaborative environments.</p>
+        </div>
+      </div>
+    </div> 
+</section>
+
 
   <!-- Contact Section -->
   <section id="contact" class="section reveal">
