--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
   </section>
 
-  <section id="interests" class="section reveal">
+  <!-- <section id="interests" class="section reveal">
     <div class="container">
       <h2>Interests & Influences</h2>
       <p class="section-intro">
@@ -92,7 +92,7 @@
         </div>
       </div>
     </div> 
-</section>
+</section> -->
 
 
   <!-- Contact Section -->
